package au.com.codeka.warworlds.common.proto;

import "common.proto";
import "empire.proto";
import "star.proto";

// Wrapper class for all the packets.
message Packet {
  optional HelloPacket hello = 1;
  optional WatchSectorsPacket watch_sectors = 2;
  optional StarUpdatedPacket star_updated = 3;
}

// The "hello" message is returned when you first connect to the game.
message HelloPacket {
  // If specified, the Empire you're currently logged in as (if not specified, it means
  // you haven't set up an empire yet, and you should do that before anything else...)
  optional Empire empire = 1;

  // If true, it means we need to re-register with GCM (maybe because last time it failed)
  optional bool require_gcm_register = 2;

  // If true, we'll force the ads to be removed. If false, or not specified, we'll check
  // whatever the In-App Purchase API has to say.
  optional bool force_remove_ads = 3;
}

// Requests that we want updates about all stars in sectors between (left,top) and (right,bottom)
// inclusive. Sending a new WatchSectors packet will override your previous watched sectors. You
// will immediately receive a StarUpdatedPacket with all of the stars in the sectors you've
// requested.
message WatchSectorsPacket {
  optional int64 top = 1;
  optional int64 left = 2;
  optional int64 right = 3;
  optional int64 bottom = 4;
}

// Sent from the server when a Star is updated. You can get more than one star update in a packet.
message StarUpdatedPacket {
  repeated Star stars = 1;
}
